added p tag message to root component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
   <h1>
     Emergency Alert!
   </h1>
+  <p>Click the button five times to activate alert</p>
 
 
   <app-action-button></app-action-button>
