added battery level functionality

--- a/src/app/action-button/action-button.component.html
+++ b/src/app/action-button/action-button.component.html
@@ -5,7 +5,9 @@
 <div>
     <div id="coordinates"></div>
 </div>
+<h1 id="battery"></h1>
 <h1>{{message}}</h1>
+
 <!-- <h1>Status: {{status}}</h1> -->
 
 
