--- a/src/app/action-button/action-button.component.css
+++ b/src/app/action-button/action-button.component.css
@@ -5,6 +5,58 @@
     width: 300px;
     background: radial-gradient(rgb(255, 100, 0), red);
     font-size: 350%;
+    z-index: 10;
+
+    
+}
+
+/* #action-button-border{
+    z-index: 0;
+    border-radius: 0%;
+    height: 330px;
+    width: 330px;
+    border: 2px solid rgb(56, 56, 250);
+    
+    -webkit-animation-name: spin;
+    -webkit-animation-duration: 4000ms;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -moz-animation-name: spin;
+    -moz-animation-duration: 4000ms;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+    -ms-animation-name: spin;
+    -ms-animation-duration: 4000ms;
+    -ms-animation-iteration-count: infinite;
+    -ms-animation-timing-function: linear;
+    
+    animation-name: spin;
+    animation-duration: 4000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+} */
+
+
+@-ms-keyframes spin {
+    from { -ms-transform: rotate(0deg); }
+    to { -ms-transform: rotate(360deg); }
+}
+@-moz-keyframes spin {
+    from { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin{
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
 }
 
 #cancel-button{
@@ -21,4 +73,8 @@
 
 #googlemap{
     display: inline-block;
+}
+
+#float_char{
+    z-index: 10;
 }
