--- a/src/app/action-button/action-button.component.css
+++ b/src/app/action-button/action-button.component.css
@@ -1,8 +1,8 @@
 #action-button{
     display: inline-block;
     border-radius: 100%;
-    height: 300px;
-    width: 300px;
+    height: 100%;
+    width: 100%;
     background: radial-gradient(rgb(255, 100, 0), red);
     font-size: 350%;
     z-index: 10;
