created status-pane component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
-  <h1>
-    Emergency Alert!
-  </h1>
-  <p>Click the button five times to activate alert</p>
+<h1>Safety Beacon</h1>
+
+<p>Click the button five times to activate alert</p>
 
 
+<div id="app-container">
   <app-action-button></app-action-button>
+  <app-status-pane></app-status-pane>
+  
+</div>
