--- a/src/app/action-button/action-button.component.css
+++ b/src/app/action-button/action-button.component.css
@@ -1,14 +1,12 @@
 #action-button{
-    display: inline-block;
     border-radius: 100%;
-    height: 100%;
-    width: 100%;
+    width: 5em;
     background: radial-gradient(rgb(255, 100, 0), red);
+    box-shadow: 10px 10px 10px black;
     font-size: 350%;
-    z-index: 10;
-
-    
+    z-index: 10;    
 }
+
 
 /* #action-button-border{
     z-index: 0;
