--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,8 @@
+
 #app-container{
-    display: grid;
+    display: block;
     justify-content: center;
-    grid-template-columns: 100% 100%;
+    /* grid-template-columns: 100% 100%; */
     width: 100%;
     height: 100%;
 }
