--- a/src/app/status-pane/status-pane.component.html
+++ b/src/app/status-pane/status-pane.component.html
@@ -1,4 +1,6 @@
 <div id="statusPane">
-    <h3>Device Status | {{message}}</h3>
+    
     <h3 id="deviceOn"></h3>
+    <!-- <h3> {{message}}</h3> -->
+    <h3 id="GPS"></h3>
   </div>
