added Mode to status pane

--- a/src/app/status-pane/status-pane.component.html
+++ b/src/app/status-pane/status-pane.component.html
@@ -1,6 +1,7 @@
 <div id="statusPane">
-    
+    <h3 id="alertMode">{{status}}</h3>
     <h3 id="deviceOn"></h3>
     <!-- <h3> {{message}}</h3> -->
     <h3 id="GPS"></h3>
+    
   </div>
