--- a/src/app/status-pane/status-pane.component.html
+++ b/src/app/status-pane/status-pane.component.html
@@ -3,5 +3,7 @@
     <h3 id="deviceOn"></h3>
     <!-- <h3> {{message}}</h3> -->
     <h3 id="GPS"></h3>
+
+    <div id="coordinates"></div>
     
   </div>
