--- a/src/app/action-button/action-button.component.css
+++ b/src/app/action-button/action-button.component.css
@@ -1,3 +1,8 @@
+#button-container{
+    display: grid;
+    grid-template-rows: 100% 100%;
+}
+
 #action-button{
     display: grid;
     border-radius: 100%;
@@ -61,14 +66,13 @@
 
 #cancel-button{
     display: grid;
-    border-radius: 10%;
+    /* border-radius: 10%; */
     height: 40px;
-    width: auto;
+    width: 5em;
     background: yellow;
     font-size: auto;
     /* align-content: center; */
-    justify-content: center;
-    /* margin-left: 100px; */
+    justify-items: center;
 }
 
 #googlemap{
