removed import of action button component to status-pane component.  Added auto margin of button pane

--- a/src/app/action-button/action-button.component.css
+++ b/src/app/action-button/action-button.component.css
@@ -12,6 +12,7 @@
     font-size: 350%;
     z-index: 10;    
     justify-content: center;
+    margin: 0 auto;
 }
 
 
@@ -73,6 +74,7 @@
     font-size: auto;
     /* align-content: center; */
     justify-items: center;
+    margin: 0 auto;
 }
 
 #googlemap{
